Update controllers, routes, and add partials

--- a/views/singleUser.handlebars
+++ b/views/singleUser.handlebars
@@ -1,3 +1,5 @@
+<h1>Times you've visited this page <b>{{ visitCount }}</b></h1>
 <h1>My username is {{ user.username }} </h1>
 <h1>My email is {{user.email}} </h1>
 <h1>My id is {{user.id}} </h1>
+<p>User Password {{ user.password }}</p>
